package guru.work.prog.main;

import guru.work.prog.swing.MainMenuForm;
import guru.work.prog.swing.NoteForm;

public class Main {

    public static void main(String[] args) {
        // write your code here
        new MainMenuForm(null);
//        new NoteForm(null);
    }
}
